--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,19 @@
       "type": "composer",
       "url": "https://wpackagist.org",
       "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "bestwebsoft/pinterest-wordpress-plugin",
+        "version": "dev-master",
+        "type": "wordpress-plugin",
+        "source": {
+          "url": "https://github.com/bestwebsoft/pinterest-wordpress-plugin.git",
+          "type": "git",
+          "reference": "master"
+        }
+      }
     }
   ],
   "require": {
@@ -41,7 +54,9 @@
     "roots/wp-config": "1.0.0",
     "wpackagist-theme/twentytwentyfive": "^1.0",
     "wpackagist-plugin/advanced-custom-fields": "^6.0",
-    "wpackagist-plugin/ewww-image-optimizer": "^8.1"
+    "wpackagist-plugin/ewww-image-optimizer": "^8.1",
+    "bestwebsoft/pinterest-wordpress-plugin": "dev-master",
+    "wpackagist-plugin/gs-behance-portfolio": "^3.1"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
